# parser_vacancies

./: README.md  main.py  pyproject.toml
scr/: db_vacancies.csv  hh_parser.py  main.py  superjob_parser.py
tests/: conftest.py  test_class_operations.py  test_db_operation.py
utils/: class_operations.py  db_operation.py
