[tool.poetry]
name = "parser-vacancies"
version = "0.1.0"
description = "The project is to obtain vacancies from HH.ru and SuperJob.ru."
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"
packages = [{include = "parser_vacancies"}]

[tool.poetry.dependencies]
python = "^3.11"
isodate = "^0.6.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
